--- a/Dockerfile.pythontex
+++ b/Dockerfile.pythontex
@@ -1,13 +1,17 @@
-FROM unibaktr/pythontex
+FROM python:slim
 MAINTAINER Marcel Grossmann <whatever4711@gmail.com>
 
-RUN mkdir -p ${dir}/LoesungTemplate ${dir}/UebungTemplate
-
-COPY PyTex.py ${dir}/
-COPY metainfo.csv ${dir}/
-ADD LoesungTemplate ${dir}/LoesungTemplate/
-ADD UebungTemplate ${dir}/UebungTemplate/
-WORKDIR ${dir}
-
-ENTRYPOINT ["/pytex/PyTex.py"]
-CMD ["-h"]
+ENV dir /pytex
+RUN apt-get update && \
+    apt-get install -y \
+    texlive-base \
+    texlive-latex-extra \
+    texlive-lang-german \
+    gnuplot \
+    latexmk \
+    texlive-math-extra \
+    texlive-fonts-extra \
+    texlive-generic-extra \
+    texlive-science && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
