--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,5 @@ jobs:
 workflows:
   buildx-and-push:
     jobs:
-      - jessie:
-          filters:
-              tags:
-                only: /.*/
+      - jessie
+      - python
